--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,7 +15,6 @@ body {
 }
 nav a{
     display: inline-block;
-
     height: 100%;
     margin-right: 1rem;
     text-decoration: none;
@@ -31,6 +30,30 @@ nav a:hover {
 }
 .front_page {
     background: url(CSS\IMG\solo-leveling-season-2-key-visual-wide.png);
+    padding-right: 5rem;
+    padding-left: 5rem;
 }
 
+h3{
+    color: #ffffff;
+    display: flex;
+    padding-left: 6rem;
+    padding-top: 2rem;
+
+}
+h5 {
+    color: #ffffff;
+    display: flex;
+    padding-left: 6rem;
+}
+
+.anime_list {
+    display: flex;
+    margin: 2rem;
+    padding-top: 0.5rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    
+
+}
     
