--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,7 +53,14 @@ h5 {
     padding-top: 0.5rem;
     padding-left: 5rem;
     padding-right: 5rem;
-    
-
 }
+.footer {
+    height: 100%;
+    text-decoration: none;
+}
+
+.footer:hover {
+    background-color: #141519;
+    color: #FFFFFF;
     
+}
